# arXivScraper

./: .gitignore  README.md  main.py  pyproject.toml  summary.example.md  summary.md
configs/: ai_provider.example.json  ai_provider.example.toml  hydro.json  mhd.toml
configs/ai/: ai_guidelines.txt  user_profile.txt
configs/search/: cosmic_rays.toml  dynamo.toml  helicity.toml  hydro.toml  icm.toml  ism.toml  mhd.toml  primordial.toml  reconnection.toml  sf.toml  solar.toml
docs/: demo_filter.py  test_filter.py
search_configs/: ai_guidelines.txt  mhd.json  user_profile.txt
src/arXivScraper/config/: directories.py  file_names.py
src/arXivScraper/routines/: download_articles.py  fetch_from_arxiv.py  score_articles.py  search_arxiv.py
src/arXivScraper/utils/: articles.py  dates.py  file_io.py  filter_criteria.py  user_inputs.py  ww_articles.py  ww_dates.py  ww_file_io.py  ww_filter_criteria.py  ww_user_inputs.py
src/arxivscraper/: app.py
src/arxivscraper/config_paths/: directories.py
src/arxivscraper/io_configs/: directories.py  file_names.py
src/arxivscraper/routines/: browse_articles.py  download_articles.py  fetch_from_arxiv.py  score_articles.py  search_arxiv.py
src/arxivscraper/support/: articles.py  dates.py  file_io.py  script_cli.py  search_criteria.py
src/arxivscraper/utils/: argparse_utils.py  article_utils.py  datetime_utils.py  filter_utils.py  io_utils.py  ww_dates.py  ww_file_io.py  ww_filter_criteria.py  ww_user_inputs.py
src/arxivscraper/workflows/: ai_score.py  browse_papers.py  download_pdfs.py  fetch_paper.py  retag.py  search_arxiv.py
src/headers/: Directories.py  FileNames.py  IO.py  WWArgParse.py  WWArticles.py  WWDates.py  WWFnFs.py  WWLists.py
src/tmp_arxivscraper/routines/: download_articles.py  fetch_from_arxiv.py  score_articles.py
tests/: test_article_utils.py  test_filter.py
utests/: test_article_utils.py  test_filter.py
