[project]
name = "arxivscraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Neco Kriel", email = "necokriel@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "arxiv>=2.2.0",
    "numpy>=2.2.5",
    "openai>=1.76.2",
    "pyyaml>=6.0.2",
    "textual>=0.50.0",
    "unidecode>=1.4.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.3",
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]

[tool.basedpyright]
include = [".", "src", "tests"]
reportMissingImports = true
reportMissingTypeStubs = false  ## third-party packages rarely ship stubs

## --- rules to suppress
reportAny = "none"  ## cascade from untyped third-party stubs (arxiv, yaml, openai, requests)
reportUnknownMemberType = "none"  ## cascade from untyped third-party stubs
reportUnknownVariableType = "none"  ## cascade from untyped third-party stubs
reportUnknownArgumentType = "none"  ## cascade from untyped third-party stubs
reportImplicitStringConcatenation = "none"  ## valid style for multi-line strings
reportImplicitOverride = "none"  ## too verbose to require @override on every override
reportUnusedCallResult = "none"  ## UI and I/O calls are invoked for side effects
reportUnannotatedClassAttribute = "none"  ## Textual DSL attributes are not typed by the framework
reportExplicitAny = "none"  ## dict[str, Any] is unavoidable at external boundaries
reportUninitializedInstanceVariable = "none"  ## instance vars initialized in non-__init__ methods

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
